sass/innerContent.scss
.innerContent {
  code {
    @include codetext;
  }

  em {
    font-style: italic;
  }

  h1 {
    font-size: 200%;
    padding: 20px 0;
  }

  h2 {
    border-bottom: 1px solid $orange;
    font-size: 150%;
    margin: 15px 0;
    padding-bottom: 5px;
  }

  h3 {
    font-size: 130%;
    padding: 10px 0;
  }

  h4 {
    font-size: 115%;
    padding: 10px 0;
  }

  img {
    max-width: 100%;
  }

  li > code {
    @include codeemph;
  }

  li code.methodListSignature {
    color: $lightorange;
    font-weight: 400;
  }

  ol {
    list-style: decimal inside;
    margin: 0.5em 0 2em;
    padding-left: 1em;
  }

  p {
    padding-bottom: 1.5em;

    & > code {
      @include codeemph;
    }
  }

  strong {
    font-weight: 700;
  }

  ul {
    list-style: disc inside;
    margin: 0.5em 0 2em;
    padding-left: 1em;
  }
}

